name: language-avr
version: 0.0.1
author: John Van Enk
maintainer: vanenkj@gmail.com
license: BSD3
license-file: LICENSE
category: Language

synopsis: Tools for working with the AVR instruction set.
description: Various tools for working with the AVR instruction set.

build-type: Simple
cabal-version: >= 1.2.0

library
    build-depends: base >= 4 && < 5
    exposed-modules: Language.AVR,
                     Language.AVR.Registers,
                     Language.AVR.Operands,
                     Language.AVR.ISA
    hs-source-dirs: src/
    ghc-options: -Wall
